gratuitous gif usage

--- a/index.html
+++ b/index.html
@@ -106,6 +106,25 @@ Spoiler alert: the date is the most important factor. It can be re-encoded as:
 
 
 ---
+# Or, in case you are anime/manga fans
+
+.pull-left[
+
+Original Column:
+
+&lt;img src="images/saitama_predictor.gif" width="75%" style="display: block; margin: auto;" /&gt;
+]
+.pull-right[
+
+Feature: 
+
+&lt;br&gt;
+
+&lt;img src="images/saitama_feature.gif" width="75%" style="display: block; margin: auto;" /&gt;
+]
+
+
+---
 # General definitions
 
 * _Data preprocessing_ are the steps that you take to make your model successful. 
@@ -323,6 +342,8 @@ chi_rec &lt;-
 
 PCA feature extraction on the columns named in the character vector `stations`. 
 
+
+(We'll use this version of the recipe in a minute)
 
 ---
 # Other possible steps
